--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="navigation_drawer_close">Close navigation</string>
     <string name="song_album">Album</string>
     <string name="save_changes">Guardar cambios</string>
+    <string name="song_number">Numero en album</string>
 </resources>
